First section & navbar overlap bug fixed.

--- a/app/styles/css/theme.css
+++ b/app/styles/css/theme.css
@@ -679,6 +679,11 @@ footer.bg-dark li,
 .image-bg li {
   color: #ffffff;
 }
+.logos {
+  height: 40vh;
+  top: 60px;
+  max-height: 80% !important;
+}
 .image-bg .container,
 .image-bg div[class*='col-'] {
   position: relative;
